# Anticipate-building-consumption-needs

./: Analyse_Exploratoire.ipynb  Modelisation_ConsommationEnergy.ipynb  Modelisation_EmissionC02.ipynb  README.md
requirements_poetry/: pyproject.toml
